# lusid-sdk-python

sdk/: README.md  pyproject.toml
sdk/docs/: AborApi.md  AborConfigurationApi.md  AddressKeyDefinitionApi.md  AggregationApi.md  AllocationServiceApi.md  AllocationsApi.md  ApplicationMetadataApi.md  BlocksApi.md  CalendarsApi.md  CashDependency.md  CashDependencyAllOf.md  CdsIndex.md  CdsIndexAllOf.md  ChartOfAccountsApi.md  ComplexBond.md  ComplexBondAllOf.md  ComplexMarketDataApi.md  ComplianceApi.md  ComplianceGenericApi.md  ComplianceTemplateParameter.md  ComplianceTemplateVariation.md  ConfigurationRecipeApi.md  ContractForDifference.md  ContractForDifferenceAllOf.md  ConventionsApi.md  CorporateActionSourcesApi.md  CounterpartiesApi.md  CreateDerivedPropertyDefinitionRequest.md  CreatePropertyDefinitionRequest.md  CustomEntitiesApi.md  CustomEntityDefinitionsApi.md  CutLabelDefinitionsApi.md  DataTypesApi.md  DerivedTransactionPortfoliosApi.md  DiscountingDependency.md  DiscountingDependencyAllOf.md  EconomicDependency.md  EntitiesApi.md  EquityCurveDependency.md  EquityCurveDependencyAllOf.md  (+73 more)
sdk/lusid/: __init__.py  configuration.py
sdk/lusid/api/: __init__.py  abor_api.py  abor_configuration_api.py  address_key_definition_api.py  aggregation_api.py  allocation_service_api.py  allocations_api.py  application_metadata_api.py  blocks_api.py  calendars_api.py  chart_of_accounts_api.py  complex_market_data_api.py  compliance_api.py  compliance_generic_api.py  configuration_recipe_api.py  conventions_api.py  corporate_action_sources_api.py  counterparties_api.py  (+38 more)
(+436 files in other folders)
